alertmanager-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-alertmanager
  namespace: observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`alertmanager.k3d.localhost`)
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
