kube-prometheus-stack-ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`grafana.k3d.local.profitbricks.net`)
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`prometheus.k3d.local.profitbricks.net`)
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-alertmanager
  namespace: observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`alertmanager.k3d.local.profitbricks.net`)
      services:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-blackbox
  namespace: observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`prometheus-blackbox.k3d.local.profitbricks.net`)
      services:
        - name: prometheus-blackbox-exporter
          port: 9115
