loki-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: loki
  namespace: observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`loki.k3d.local.profitbricks.net`)
      services:
        - name: loki-stack
          port: 3100
