prometheus-blackbox-exporter-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-blackbox
  namespace: observability
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`prometheus-blackbox.k3d.local.profitbricks.net`)
      services:
        - name: prometheus-blackbox-exporter
          port: 9115
